--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sass</title>
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <!-- nesting -->
-    <div class="container-nesting">
+    <!-- ! nesting -->
+    <!-- <div class="container">
       <section class="main">
         <div class="main-heading">
           <h1>Hello Dwi</h1>
@@ -28,6 +29,17 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo molestias dolores natus voluptatum tenetur est consequuntur vel sapiente dolor nostrum!</p>
         </div>
       </footer>
-    </div>
+    </div> -->
+    
+    <!-- ! 3.variabel -->
+    <!-- <div class="container">
+      <div class="header">
+        <h1>Hello Dwi</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam repellendus cum, architecto maxime laudantium laborum vero explicabo ducimus unde accusamus fuga, error, placeat esse optio quas ipsa necessitatibus repudiandae? Incidunt.</p>
+      </div>
+    </div> -->
+
+    <!-- ! 4.Mixin -->
+    
   </body>
 </html>
