--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </footer>
     </div> -->
-    
+
     <!-- ! 3.variabel -->
     <!-- <div class="container">
       <div class="header">
@@ -39,7 +39,65 @@
       </div>
     </div> -->
 
-    <!-- ! 4.Mixin -->
+    <!-- ! 4.Mixin & module -->
+    <!-- <div class="header">
+      <ul>
+        <li><a href="">Link 1</a></li>
+        <li><a href="">Link 2</a></li>
+        <li><a href="">Link 3</a></li>
+        <li><a href="">Link 4</a></li>
+        <li><a href="">Link 5</a></li>
+      </ul>
+    </div>
+    <div class="main">
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+      </ul>
+      <div class="container">
+        <div class="box">box 1</div>
+        <div class="box">box 2</div>
+        <div class="box">box 3</div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <ul>
+        <li><a href="">Link 1</a></li>
+        <li><a href="">Link 2</a></li>
+        <li><a href="">Link 3</a></li>
+        <li><a href="">Link 4</a></li>
+        <li><a href="">Link 5</a></li>
+      </ul>
+    </div> -->
+    <!-- ! Flow Control -->
+    <!-- <img width="100vh" class="circle-profile" src="img/dwi.jpg" alt="dwi">
+    <img width="500vh" class="square-profile" src="img/dwi.jpg" alt="dwi">
+
+    <div class="right"></div>
+
+  <ul class="gradient">
+      <li>item-1</li>
+      <li>item-2</li>
+      <li>item-3</li>
+      <li>item-4</li>
+      <li>item-5</li>
+      <li>item-6</li>
+      <li>item-7</li>
+      <li>item-8</li>
+      <li>item-9</li>
+      <li>item-10</li>
+    </ul>
     
+    <ul class="socials">
+      <li class="youtube">https://youtube.com/webprogrammingunpas</li>
+      <li class="facebook">https://youtube.com/webprogrammingunpas</li>
+      <li class="instagram">https://youtube.com/webprogrammingunpas</li>
+    </ul> -->
+    <!-- ! build-in Modules  -->
+    <h1>Muhammad Dwi Susanto</h1>
   </body>
 </html>
